app/assets/stylesheets/layout/tables/properties.css
.page.properties {
  padding: 0;
}
.page.properties h1 {
  margin: 0;
}
.properties table {
  table-layout: auto;
  width: 100%;
}
.properties tr td {
  padding: 10px;
  border-top: solid 1px var(--block-border-color);
}
.properties td.label {
  background: var(--label-background);
  width: 25%;
  border-right: solid 1px var(--block-border-color);
  text-align: right;
}
.properties td.field {
  width: 75%;
}
.properties td.field textarea,
.properties td.field input[type=text],
.properties td.field input[type=email],
.properties td.field input[type=password],
.properties td.field label.text-input {
  width: 100%;
}
.properties td.field textarea {
  resize: vertical;
}
.properties .section {
  font-weight: bold;
}

.properties.ribbed tr:nth-child(2n + 1) {
  background: var(--rib-color);
}

